fixed home logo spacing

--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -194,8 +194,8 @@
 
 #site_logo_large {
   width: 30rem;
-  height: 30rem;
-  margin-top: -19rem;
+  height: 22rem;
+  margin-top: -17rem;
   pointer-events: none;
 }
 
